--- a/23_React-app-Form-Validation/my-app/public/index.html
+++ b/23_React-app-Form-Validation/my-app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Online Calculator</title>
+    <title>React App</title>
   </head>
   <body>
     <div id="root"></div>
